index.html, app link update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="row-fluid">
                 <div class="span12 text-center padding-top-20">
-                    <a href="itms-services://?action=download-manifest&url=http://construction.ireland.sika.com/download/manifest.plist">
+                    <a href="itms-services://?action=download-manifest&url=http://construction.ireland.sika.cfadigital.com/download/manifest.plist">
                         <div id="appInstall" class="div-center padding-top-bottom-20 app-link-box div-center">
                             <span>TAP HERE TO</span><br/>
                             <span>INSTALL THE APP</span><br/>
